# lang-regularity-study

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: experiment_matrix_latin.yaml  latin_large.yaml  latin_tight.yaml  latin_xlarge.yaml  lowercase.yaml  small_debug.yaml
docs/: pr_plan.md  regularity_study_plan.md
scripts/: build_results_table.py
src/lang_regularity/: cli.py  config.py
src/lang_regularity/data/: bpe.py  clean.py  fetch.py  paths.py  sample.py  tokenize.py
src/lang_regularity/eval/: compare.py  perplexity.py  robustness.py
src/lang_regularity/models/: catalog.py  dataset.py  generate.py  gpt.py  trainer.py  validate.py
src/lang_regularity/tokenization/: __init__.py  encode.py  train_bpe.py
src/lang_regularity/utils/: device.py
