[project]
name = "lang-regularity-study"
version = "0.1.0"
description = "Study of language regularity using streamed Wikipedia corpora"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "datasets>=3.0.0",
    "tokenizers>=0.20.0",
]

[project.optional-dependencies]
train = [
    "torch>=2.2.0",
]

[project.scripts]
lang-regularity = "lang_regularity.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lang_regularity"]
